# fermbot

./: .gitignore  README.md  app.py  configure_graph.py  draft.ipynb  draftcam.py  pyproject.toml  requirements.txt
fermbot/: __version__.py
fermbot/common/: constants.py
fermbot/common/datasets/: backward_compatibility.py  compute_stats.py  factory.py  fermbot_dataset.py  image_writer.py  online_buffer.py  sampler.py  transforms.py  utils.py  video_utils.py
fermbot/common/envs/: __init__.py  configs.py  factory.py  utils.py
fermbot/common/optim/: __init__.py  factory.py  optimizers.py  schedulers.py
fermbot/common/policies/: factory.py  normalize.py  pretrained.py  utils.py
fermbot/common/policies/act/: configuration_act.py  modelling_act.py
fermbot/common/robot_devices/: control_configs.py  control_utils.py  utils.py
fermbot/common/robot_devices/cameras/: configs.py  cv.py  intelrealsense.py  opencv.py  utils.py
fermbot/common/robot_devices/motors/: configs.py  feetech.py  utils.py
fermbot/common/robot_devices/robots/: configs.py  feetech_calibration.py  manipulator.py  utils.py
fermbot/common/utils/: hub.py  io_utils.py  utils.py
fermbot/configs/: default.py  eval.py  parser.py  policies.py  train.py  types.py
fermbot/scripts/: configure_motor.py  control_robot.py  find_motors_bus_port.py
fermbot/tests/cameras/: mock_cv2.py  mock_pyrealsense2.py
fermbot/tests/motors/: mock_scservo_sdk.py
fermia_camera/: __init__.py
fermia_camera/realsense_camera/: __init__.py  configs.py  publisher.py  utils.py
fermia_camera/usb_camera/: __init__.py  configs.py  publisher.py  utils.py
